# machine-learning

./: app.py  dashboard.txt  employee_data.ipynb  employee_data2.ipynb  example.db  pyproject.toml  test.ipynb
data/: Employee Data.xlsx  employee_data.csv
