[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["nicholasptran"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
plotnine = "^0.12.1"
plotly = "^5.14.1"
nbformat = "^5.8.0"
graphviz = "^0.20.1"
xgboost = "^1.7.5"
optuna = "^3.1.1"
nbconvert = "^7.4.0"
jupyter = "^1.0.0"
imblearn = "^0.0"
lime = "^0.2.0.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
optuna-dashboard = "^0.10.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
